The about me section is almost finished

--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
         </div>
     </header>
 
-    <!-- Services Section -->
+    <!-- Skills Section -->
     <section id="skills">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Skills</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted"></h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -92,7 +92,8 @@
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">UX</h4>
-                    <p class="text-muted">I have a good sense of empathy, along with an ability to effectively evaluate what the user’s current needs are, and what the future needs may be. Information Archcatuxure is something I specalize in. I believe that being a UX designer is a process of learning and evolving to slove problems in creative ways. My mix of skills allow me to be a good communicator to the technical side of a team, as well as  that stakeholders, and the design team.</p>
+                    <p class="text-muted">I have a good sense of empathy, along with an ability to effectively evaluate what the user’s current needs are, and what the future needs may be. Information Architecture is something I specialize in. I believe that being a UX designer is a process of learning and evolving to solve problems in creative ways. My mix of skills allow me to be a good communicator to the technical side of a team, as well as that stakeholders, and the design team.
+                    </p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -100,7 +101,8 @@
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Front End Developer</h4>
-                    <p class="text-muted">After completing the Galvanize six month full stack web development immersive program, my technical skills are sharp. The program gave me hands on experience with agile methodology, numerous JavaScript frameworks, writing user stories and identifying specific problems. Building out websites from conception through completion, including the conceptual sketches, wireframes, turing mockups into functional websites, JavaScript, styling, and markup languages were also a components of my education. I always continue to learn and improve my skill set. I am currently focused on ReactJS</p>
+                    <p class="text-muted">After completing the Galvanize six month full stack web development immersive program, my technical skills are sharp. The program gave me hands on experience with agile methodology, numerous JavaScript frameworks, writing user stories and identifying specific problems. Building out websites from conception through completion, including the conceptual sketches, wireframes, turing mockups into functional websites, JavaScript, styling, and markup languages were also a components of my education. I always continue to learn and improve my skill set. I am currently focused on ReactJS.
+                    </p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -108,7 +110,8 @@
                         <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">UI</h4>
-                    <p class="text-muted">I have a strong visual design background. Working as a UX desingner I have desinged and created web banner ads and other visual elements. Prototypes are  I have extensive design experience, including a B.S. in New Media from Oregon State University. I have worked in visual media in several different roles. For years, I worked as a Creative Services Producer for ABC, FOX, and NBC affiliates. In this role I did a large amount of graphic design including creating dozens of television commercials and promotional videos. I took my projects from storyboard to on air. I designed all the graphics and logos in the commercials I produced; I also did all the video graphics and editing. This was accomplished through the use of serval visual design programs including: Photoshop, After Effects, Sketch and Apple Motion and other Adobe Products. In my role as a broadcast technician, I also designed visuals for the onboard cruise ship television using Photoshop, Avid, Illustrator</p>
+                    <p class="text-muted">I have a strong visual design background. Working as a UX designer I have designed and created web banner ads and other visual elements. Prototypes are I have extensive design experience, including a B.S. in New Media from Oregon State University. I have worked in visual media in several different roles. For years, I worked as a Creative Services Producer for ABC, FOX, and NBC affiliates. In this role I did a large amount of graphic design including creating dozens of television commercials and promotional videos. I took my projects from storyboard to on air. I designed all the graphics and logos in the commercials I produced; I also did all the video graphics and editing. This was accomplished through the use of serval visual design programs including: Photoshop, After Effects, Sketch and Apple Motion and other Adobe Products. In my role as a broadcast technician, I also designed visuals for the onboard cruise ship television using Photoshop, Avid, Illustrator.
+                    </p>
                 </div>
             </div>
         </div>
@@ -120,7 +123,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Projects</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted"></h3>
                 </div>
             </div>
             <div class="row">
@@ -218,7 +221,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About Me</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted"></h3>
                 </div>
             </div>
             <div class="row">
@@ -226,29 +229,29 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                                <img class="img-rounded img-responsive" src="img/anchorage.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2009-2011</h4>
-                                    <h4 class="subheading">Our Humble Beginnings</h4>
+                                    <h4>Early Years</h4>
+                                    <h4 class="subheading">Alaska</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Born and raised in Alaska. Graduated from Dimond High School. Started my working career at the age of 14 and held various jobs including: concession stand worker, carpet cleaner, steal worker, bus boy, oil field worker, painters assistant, and facilities assistant.</p>
                                 </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                                <img class="img-rounded img-responsive" src="img/grad.JPG" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>March 2011</h4>
-                                    <h4 class="subheading">An Agency is Born</h4>
+                                    <h4>June 2011</h4>
+                                    <h4 class="subheading">Graduation</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Attended Oregon State University. Graduated with a degree in New Media Communications. Was very active in student media. Held the position of News Director for the KBVR FM. Also woredk for the college television station.</p>
                                 </div>
                             </div>
                         </li>
@@ -258,11 +261,12 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
+                                    <h4>Visual Media Experience</h4>
+                                    <h4 class="subheading">Creating Visual Media</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Worked professtionaly creating visual media in many forms. Executed a number of editing endeavors; edited regional commercials that aired statewide on both FOX and ABC and edited the news in a linear and non-linear format; co-produced and edited a 30-minute sports show special; Wrote, shot, and voiced news pieces and commercials; assisted clients through all steps of storyboard planning; conceptualized commercial themes, wrote scripts, edited dozens of news story promos. Shot live and pre-recorded shows for ABC, NBC, FOX as well as a live and pre-recorded local political talk shows. Conceptualized many designs and implemented those designs using Photoshop, After Effects, Apple Motion, and several other video and graphic design programs. Created graphics, logos and full page graphic designs, created sidebars and lower thirds. Acted as a liaison between the client and the station. Making ideas a reality while also communicating technical boundaries to the client.
+                                    </p>
                                 </div>
                             </div>
                         </li>
@@ -272,8 +276,8 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>July 2014</h4>
-                                    <h4 class="subheading">Phase Two Expansion</h4>
+                                    <h4>Web Development and UX</h4>
+                                    <h4 class="subheading"></h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
@@ -299,67 +303,42 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Me</h2>
-                    <h3 class="section-subheading text-muted">Please feel free to reach out to me, I would love to hear from you.</h3>
+                    <h3 class="section-heading">Please feel free to reach out to me, I would love to hear from you.</h3>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-4">
                     <div class="contact">
                         <a href="https://www.linkedin.com/in/samuelrosenbluth/"><img src="img/contact/linkedInLogo.png" class="img-responsive img-circle" alt="My linkedIn"></a>
-                        <a href="https://www.linkedin.com/in/samuelrosenbluth/"><h4 class="text-muted">Please visit my LinkedIn and send me a message</h4></a>
+                        <a href="https://www.linkedin.com/in/samuelrosenbluth/"><h4 class="section-heading">Please visit my LinkedIn</h4></a>
 
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="contact">
-                        <img src="img/contact/octocat.png" class="img-responsive img-circle" alt="">
-                        <h4 class="text-muted">Visit my gitHub page and see my projects</h4>
+                      <a href="https://github.com/rosenbluth">
+                        <img src="img/contact/octocat.png" class="img-responsive img-circle" alt=""></a>
+                        <a href="https://github.com/rosenbluth"><h4 class="section-heading">Visit my gitHub to see my projects</h4></a>
 
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="contact">
-                        <img src="img/contact/twitter4.png" class="img-responsive img-circle twitter" alt="">
-                        <h4 class="text-muted">Follow me: @SamRosenbluth</h4>
-
+                      <a href="https://twitter.com/?lang=en">
+                        <img src="img/contact/twitter4.png" class="img-responsive img-circle twitter" alt=""></a>
+                        <a href="https://twitter.com/?lang=en">
+                        <h4 class="section-heading">Follow me: @SamRosenbluth</h4>
+                        </a>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">I'm always looking for new projects to work on. Please reach out if you have ideas, or would just like to talk.</p>
+                    <p class="section-heading">I'm always looking for new projects to work on. Please reach out if you have ideas, or would just like to talk.</p>
                 </div>
             </div>
         </div>
     </section>
-
-    <!-- Clients Aside -->
-    <aside class="clients">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/envato.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/designmodo.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/themeforest.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-            </div>
-        </div>
-    </aside>
 
     <!-- Contact Section -->
 
@@ -371,19 +350,9 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
+                        <li><a href="https://twitter.com/SamRosenbluth?lang=en"><i class="fa fa-twitter"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-md-4">
-                    <ul class="list-inline quicklinks">
-                        <li><a href="#">Privacy Policy</a>
-                        </li>
-                        <li><a href="#">Terms of Use</a>
+                        <li><a href="https://www.linkedin.com/in/samuelrosenbluth/"><i class="fa fa-linkedin"></i></a>
                         </li>
                     </ul>
                 </div>
