Skills section is complete

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="intro-text">
                 <div class="intro-heading">Sam Rosenbluth</div>
                 <div class="intro-lead-in">A UX desinger and front end developer; reliable, with professional experience and a passion for development</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                <a href="#projects" class="page-scroll btn btn-xl">My Work</a>
             </div>
         </div>
     </header>
@@ -92,7 +92,7 @@
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">UX</h4>
-                    <p class="text-muted">I have a good sense of empathy, along with an ability to effectively evaluate what the user’s current needs are, and what the future needs may be. Information Architecture is something I specialize in. I believe that being a UX designer is a process of learning and evolving to solve problems in creative ways. My mix of skills allow me to be a good communicator to the technical side of a team, as well as that stakeholders, and the design team.
+                    <p class="text-muted">I have a good sense of empathy, along with an ability to effectively evaluate what the user’s current needs are, and what the future needs may be. Information Architecture is something I specialize in. I believe that being a UX designer is a process of learning and evolving to solve problems in creative ways. I take feed back well and I am able to make important changes during the iteration process. My mix of skills allow me to be a good communicator to the technical side of a team, as well as the stakeholders, and the design team. My number one strength is empathy. I can generally figure out user flow problems, and my technical skills allow me to help come up with feasible solutions. I have experience speaking with the clients to find out their needs; and come up with efficient solutions to business problems.
                     </p>
                 </div>
                 <div class="col-md-4">
@@ -101,7 +101,7 @@
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Front End Developer</h4>
-                    <p class="text-muted">After completing the Galvanize six month full stack web development immersive program, my technical skills are sharp. The program gave me hands on experience with agile methodology, numerous JavaScript frameworks, writing user stories and identifying specific problems. Building out websites from conception through completion, including the conceptual sketches, wireframes, turing mockups into functional websites, JavaScript, styling, and markup languages were also a components of my education. I always continue to learn and improve my skill set. I am currently focused on ReactJS.
+                    <p class="text-muted">After completing the Galvanize six month full stack web development immersive program, my technical skills are sharp. The program gave me hands on experience with agile methodology, numerous JavaScript frameworks, writing user stories and identifying specific problems. Building out websites from conception through completion, including the conceptual sketches, wireframes, turing mockups into functional websites, JavaScript, styling, and markup languages were also a components of my education. I always continue to learn and improve my skill set. I am currently focused on ReactJS and JSX.
                     </p>
                 </div>
                 <div class="col-md-4">
