Finished the project section and cleaned up the layout

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-heading">Sam Rosenbluth</div>
+                <div class="intro-heading" id="myName">Sam Rosenbluth</div>
                 <div class="intro-lead-in">A UX designer and front end developer; reliable, with professional experience and a passion for development</div>
                 <a href="#projects" class="page-scroll btn btn-xl">My Work</a>
             </div>
@@ -267,7 +267,7 @@
                                     <h4 class="subheading">Creating Visual Media</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Worked professtionaly creating visual media in many forms. Executed a number of editing endeavors; edited regional commercials that aired statewide on both FOX and ABC and edited the news in a linear and non-linear format; co-produced and edited a 30-minute sports show special; Wrote, shot, and voiced news pieces and commercials; assisted clients through all steps of storyboard planning; conceptualized commercial themes, wrote scripts, edited dozens of news story promos. Shot live and pre-recorded shows for ABC, NBC, FOX as well as a live and pre-recorded local political talk shows. Conceptualized many designs and implemented those designs using Photoshop, After Effects, Apple Motion, and several other video and graphic design programs. Created graphics, logos and full page graphic designs, created sidebars and lower thirds. Acted as a liaison between the client and the station. Making ideas a reality while also communicating technical boundaries to the client.
+                                    <p class="text-muted">Worked professionally creating visual media in many forms. Executed a number of editing endeavors; edited regional commercials that aired statewide on both FOX and ABC and edited the news in a linear and non-linear format; co-produced and edited a 30-minute sports show special; Wrote, shot, and voiced news pieces and commercials; assisted clients through all steps of storyboard planning; conceptualized commercial themes, wrote scripts, edited dozens of news story promos. Shot live and pre-recorded shows for ABC, NBC, FOX as well as a live and pre-recorded local political talk shows. Conceptualized many designs and implemented those designs using Photoshop, After Effects, Apple Motion, and several other video and graphic design programs. Created graphics, logos and full page graphic designs, created sidebars and lower thirds. Acted as a liaison between the client and the station. Making ideas a reality while also communicating technical boundaries to the client.
                                     </p>
                                 </div>
                             </div>
@@ -408,7 +408,7 @@
                                       <a href="https://github.com/rosenbluth/SB-Angular-Front-End">GitHub Link Here</a></p>
                                 <ul class="list-inline">
                                     <li>Date: January 2017</li>
-                                    <li>Category: UX/UI and front end</li>
+                                    <li>Category: UX/UI and Front End</li>
                                 </ul>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                             </div>
