Fixed the text on UX section

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     </span>
                     <br></br>
                     <h4 class="service-heading">Front End Developer</h4>
-                    <p class="text-muted">After completing the Galvanize six month full stack web development immersive program, my technical skills are sharp. The program gave me hands on experience with agile methodology, numerous JavaScript frameworks, writing user stories and identifying specific problems. Building out websites from conception through completion, including the conceptual sketches, wireframes, turing mockups into functional websites, JavaScript, styling, and markup languages were also a components of my education. I always continue to learn and improve my skill set. I am currently focused on ReactJS and JSX.
+                    <p class="text-muted">After completing the <a href="https://www.galvanize.com/austin/web-development">Galvanize</a> six month full stack web development immersive program, my technical skills are sharp. The program provided hands-on experience with agile methodology, numerous JavaScript frameworks, writing user stories and identifying specific problems. My Galvanize education also included building out websites from conception through completion; including conceptual sketches, wireframes, turning mockups into functional websites, JavaScript, JS front-end frameworks, styling, and markup languages. I always continue to learn and improve my skill set. I am currently focused on ReactJS and JSX.
                     </p>
                 </div>
                 <div class="col-md-4">
