fixed the write ups

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <br></br>
 
                     <h4 class="service-heading">UX</h4>
-                    <p class="text-muted">I have a good sense of empathy, along with an ability to effectively evaluate what the user’s current needs are, and what the future needs may be. Information Architecture is something I specialize in. I believe that being a UX designer is a process of learning and evolving to solve problems in creative ways. I take feed back well and I am able to make important changes during the iteration process. My mix of skills allow me to be a good communicator to the technical side of a team, as well as the stakeholders, and the design team. My number one strength is empathy. I can generally figure out user flow problems, and my technical skills allow me to help come up with feasible solutions. I have experience speaking with the clients to find out their needs; and come up with efficient solutions to business problems.
+                    <p class="text-muted">An effective UX designer must imaginatively and creatively solve problems and keep up with the fast pace of technology; these skills require that a UX designer have a well-developed sense of empathy and also continue learning about their craft in order to bring fresh knowledge to a project. Ongoing education is a priority for me.  I continue to learn, whether in a class or from current instructional books. I have a well-developed sense of empathy which gives me the ability to evaluate a user’s present needs and to anticipate what future needs may be.  Information Architecture is a specialty. As a team player, I take feedback well and I am able to make important changes during the iteration process.  Flexibility is key to excellent design.  My mix of design and technical skills allows me to communicate well with stakeholders, design teams, and the technical members of a team.  Additionally, deciphering user flow problems and determining feasible solutions are two strong abilities.   Past employment has provided me with real world experience speaking with clients to find out their needs and to design efficient solutions to business problems.
                     </p>
                 </div>
                 <div class="col-md-4">
@@ -112,7 +112,7 @@
                     </span>
                     <br></br>
                     <h4 class="service-heading">UI</h4>
-                    <p class="text-muted">I have a strong visual design background. Working as a UX designer I have designed and created web banner ads and other visual elements. Prototypes are I have extensive design experience, including a B.S. in New Media from Oregon State University. I have worked in visual media in several different roles. For years, I worked as a Creative Services Producer for ABC, FOX, and NBC affiliates. In this role I did a large amount of graphic design including creating dozens of television commercials and promotional videos. I took my projects from storyboard to on air. I designed all the graphics and logos in the commercials I produced; I also did all the video graphics and editing. This was accomplished through the use of serval visual design programs including: Photoshop, After Effects, Sketch and Apple Motion and other Adobe Products. In my role as a broadcast technician, I also designed visuals for the onboard cruise ship television using Photoshop, Avid, Illustrator.
+                    <p class="text-muted">I have a strong visual design background. Working as a UX designer I have designed and created web banner ads as well as other visual elements. I also have a B.S. in New Media Communication from Oregon State University.  I have extensive design experience, including a B.S. in New Media from Oregon State University. I have worked in visual media in several different roles. As a Creative Services Producer for ABC, FOX, and NBC affiliates I completed considerable amounts of graphic design; including creating dozens of television commercials and promotional videos. I developed my projects from storyboard to on air and designed all the graphics and logos in the commercials, which I produced. I also completed all the video graphics and editing. During this start to finish production work I used several visual design programs including: Photoshop, After Effects, Sketch and Apple Motion and other Adobe Products. In my employment as a broadcast technician I used Photoshop, Avid, and Illustrator while designing visuals for the onboard cruise ship television programing.
                     </p>
                 </div>
             </div>
@@ -289,8 +289,9 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
+                              <img class="img-rounded img-responsive" id="myPic" src="img/my_picture.png" alt="">
                                     <br></br>
-                                    <p class="text-muted">Next Adventure!
+                                    <p class="text-muted">My next adventure!
                                     </p>
                             </div>
                         </li>
