download resume feature works. Last commit before deployment

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                                     <h4 class="subheading">Alaska</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Born and raised in Alaska. Graduated from Dimond High School. Started my working career at the age of 14 and held various jobs including: concession stand worker, carpet cleaner, steal worker, bus boy, oil field worker, painters assistant, and facilities assistant.</p>
+                                    <p class="text-muted">I was born and raised in Alaska and graduated from Dimond High School. I began working at the age of 14 and held various jobs including: concession stand worker, carpet cleaner, steel worker, bus boy, oil field worker, painters assistant, and facilities assistant.</p>
                                 </div>
                             </div>
                         </li>
@@ -253,7 +253,8 @@
                                     <h4 class="subheading">Graduation</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Attended Oregon State University. Graduated with a degree in New Media Communications. Was very active in student media. Held the position of News Director for the KBVR FM. Also woredk for the college television station.</p>
+                                    <p class="text-muted">After graduation I worked professionally creating visual media in many forms: I executed a number of editing endeavors; edited regional commercials that aired statewide on both FOX and ABC and edited the news in a linear and non-linear format; co-produced and edited a 30-minute sports show special; wrote, shot, and voiced news pieces and commercials; assisted clients through all steps of storyboard planning; conceptualized commercial themes, wrote scripts, edited dozens of news story promos. I also shot live and pre-recorded shows for ABC, NBC, FOX as well as a live and pre-recorded local political talk shows. Additional work included conceptualizing numerous designs and implementing the designs using Photoshop, After Effects, Apple Motion, and several other video and graphic design programs. I also created graphics, logos and full page graphic designs, created sidebars and lower thirds. I communicated directly with clients.  As the liaison between the client and the station, I worked to make client ideas a reality while also communicating the technical boundaries to the client.
+                                    </p>
                                 </div>
                             </div>
                         </li>
@@ -282,7 +283,7 @@
                                     <h4 class="subheading"></h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">While attending the Galvanize full stack web development program I executed a number of projects using JavaScript(ES2016) specifically: Angular, Postgres, Express, Node.js. I also did a fair amount of other tasks involved with web design including: producing original ideas for new projects, and assisting on proof of concept presentations, writing user stories, maintaining scrum boards, researching different technologies. As the full stack web development ended I worked for start ups on web development projects. I worked under contract as a UX designer. Tasks included: information architecture, high fidelity prototyping for custom software, speaking with the clients to find out their needs as well and come up with efficient solutions to business problems, iteration through prototypes with the clients and team members in order to find a feasible solutions and meet the client's needs, and creating animated web banner ads, produced original ideas for new projects and assisted on proof of concept presentations.
+                                    <p class="text-muted">While attending the Galvanize full stack web development program I executed a number of projects using JavaScript(ES2016) specifically: Angular, Postgres, Express, Node.js. I also completed other tasks involved with web design including: producing original ideas for new projects, assisting on proof of concept presentations, writing user stories, maintaining scrum boards, and researching different technologies. When the Galvanize full stack web development ended, I worked under contract as a UX designer for startups on web development projects. Tasks included: information architecture, high fidelity prototyping for custom software, speaking with clients to find out their needs and to develop efficient solutions to business problems, iteration through prototypes with the clients and team members to find feasible solutions and meet the client's needs.  I also created animated web banner ads, produced original ideas for new projects, and assisted on proof of concept presentations.
                                     </p>
                                 </div>
                             </div>
@@ -346,19 +347,28 @@
                     <div class="row">
                       <div class="col-md-8">
                         <span class="fa-stack fa-4x">
-
                           <a href="mailto:samuel.rosenbluth@gmail.com"><h4>Email Me</h4><i class="fa fa-laptop fa-2x" "img-responsive"></i>
                         </span>
-
                         </a>
+                      </div>
+                  </div>
+              </div>
+              <br></br>
+              <br></br>
+                        <div class="container">
+                          <div class="row">
+                            <div class="col-md-8">
+                        <span class="fa-stack fa-4x">
+                        <a href="/Users/samuelrosenbluth/Desktop/galvanize/portfolio/personalWebsite/img/SAMUEL_ROSENBLUTH_resume.pdf" download="SAMUEL_ROSENBLUTH_resume.pdf"><h4>Download my Resume</h4><i class="fa fa-arrow-circle-down fa-2x" aria-hidden="true"></i>
+                        </span>
+                      </a>
                       </div>
                     </div>
                   </div>
                   <br></br>
+                  <br></br>
                     <p class="section-heading">I'm always looking for new projects to work on. Please reach out if you have ideas, or would just like to talk.</p>
-                </div>
-            </div>
-        </div>
+
     </section>
 
     <!-- Contact Section -->
@@ -567,7 +577,7 @@
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
                                 <h2>Below are some examples of visual media I created outside of the web development field</h2>
-                                <p class="item-intro text-muted">Most of these were created between 2012-2015</p>
+                                <p class="item-intro text-muted">2012-2016</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/otherVisualMedia.png" alt="">
 
                                   <iframe width="420" height="315" src="https://www.youtube.com/embed/Z6tDoR-63cs"></iframe>
